--- a/Topic10/Avaliativo/atvsAdicionais.tex
+++ b/Topic10/Avaliativo/atvsAdicionais.tex
@@ -56,7 +56,7 @@
 \begin{titlepage}
     \centering
     % Cabeçalho personalizado
-    \includegraphics[width=0.3\textwidth]{../Topic1/Avaliativo/Imagens/Logo UFLA - Colorida chapada.png}
+    \includegraphics[width=0.3\textwidth]{../../Topic1/Avaliativo/Imagens/Logo UFLA - Colorida chapada.png}
 
     \vspace*{2cm} % Espaçamento vertical antes do cabeçalho
     \Large
@@ -66,7 +66,7 @@
     
     \vspace{2cm} % Espaço entre o cabeçalho e o título
     \huge % Define o tamanho da fonte do título
-    \textbf{Tópico 6 Lista Avaliativa}
+    \textbf{Tópico 10 Lista Avaliativa}
     
     \vfill % Adiciona um espaçamento flexível antes do rodapé (opcional)
     
@@ -80,7 +80,7 @@
 \newpage
 
 \section{Introdução}
-Este documento tem como objetivo apresentar o desenvolvimento das atividades avaliativas para o tópico 6 da disciplina de Sistemas Operacionais, focando na implementação de códigos em linguagem C. Serão apresentadas as questões, a resolução, os códigos desenvolvidos, seguido da apresentação dos resultados da execução do código.
+Este documento tem como objetivo apresentar o desenvolvimento das atividades avaliativas para o tópico 10 da disciplina de Sistemas Operacionais, focando na implementação de códigos em linguagem C. Serão apresentadas as questões, a resolução, os códigos desenvolvidos, seguido da apresentação dos resultados da execução do código.
 
 \section{Questões}
 
@@ -100,38 +100,6 @@ Este documento tem como objetivo apresentar o desenvolvimento das atividades ava
 \textbf{Pergunta:} 3)  \newline
 
 \textbf{Resposta: }
-
-\subsection{4}
-
-\textbf{Pergunta:} 4)  \newline
-
-\textbf{Resposta:} 
-
-\subsection{5}
-
-\textbf{Pergunta:} 5) \newline
-
-\textbf{Resposta:} 
-
-\section{Desenvolver um programa}
-
-\subsection{}
-
-\textbf{Enunciado:}  \newline
-
-\subsection{Código}
-\label{sub-sec-cod}
-%\lstinputlisting[language=C]{Codes/atv6T5.c}
-
-\subsection{Testes e Resultados}
-Como resultado da execução do código exibido na subceção \ref{sub-sec-cod}, obtivemos a saída ilustrada na figura \ref{fig:exec}. 
-
-\begin{figure}[ht]
-    \centering
-    %\includegraphics[width=1\textwidth]{./Images/saída.png}
-    \caption{Resultado da execução do programa}
-    \label{fig:exec}
-\end{figure}
 
 \printbibliography % Imprime a lista de referências
 
